@startuml

title __MINDSWAP's Class Diagram__\n

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Client {
        - tableNumber : int
        + askForTable()
        + order()
        + pay()
        + setRestaurant()
        - checkRestaurantPresence()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Main {
        {static} + main()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Restaurant {
        - fullCapacity : boolean
        - numberOfOccupiedTables : int
        - tables : Table[]
        + Restaurant()
        + findTable()
        + freeTable()
        + order()
        - checkIfTableCanBeFreed()
        - occupyTable()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Table {
        - free : boolean
        - order : String
        + Table()
        + cleanOrder()
        + getOrder()
        + isFree()
        + occupy()
        + saveOrder()
        + unoccupy()
    }
  }
  

  com.mindera.mindswap.Client o-- com.mindera.mindswap.Restaurant : restaurant
  com.mindera.mindswap.Restaurant o-- com.mindera.mindswap.Table : tables



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
